# AROF/agent/python-flask-server/swagger_server/models/operation.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class Operation(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, laser_enable: bool=None, arof_id: int=None):  # noqa: E501
-        """Operation - a model defined in Swagger
-
-        :param laser_enable: The laser_enable of this Operation.  # noqa: E501
-        :type laser_enable: bool
-        :param arof_id: The arof_id of this Operation.  # noqa: E501
-        :type arof_id: int
-        """
-        self.swagger_types = {
-            'laser_enable': bool,
-            'arof_id': int
-        }
-
-        self.attribute_map = {
-            'laser_enable': 'laser_enable',
-            'arof_id': 'arof_id'
-        }
-
-        self._laser_enable = laser_enable
-        self._arof_id = arof_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Operation':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The operation of this Operation.  # noqa: E501
-        :rtype: Operation
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def laser_enable(self) -> bool:
-        """Gets the laser_enable of this Operation.
-
-
-        :return: The laser_enable of this Operation.
-        :rtype: bool
-        """
-        return self._laser_enable
-
-    @laser_enable.setter
-    def laser_enable(self, laser_enable: bool):
-        """Sets the laser_enable of this Operation.
-
-
-        :param laser_enable: The laser_enable of this Operation.
-        :type laser_enable: bool
-        """
-
-        self._laser_enable = laser_enable
-
-    @property
-    def arof_id(self) -> int:
-        """Gets the arof_id of this Operation.
-
-
-        :return: The arof_id of this Operation.
-        :rtype: int
-        """
-        return self._arof_id
-
-    @arof_id.setter
-    def arof_id(self, arof_id: int):
-        """Sets the arof_id of this Operation.
-
-
-        :param arof_id: The arof_id of this Operation.
-        :type arof_id: int
-        """
-
-        self._arof_id = arof_id
